Added google auth, edited contributing.md

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 NEXTAUTH_URL=http://localhost:3000
-# NEXTAUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+# NEXTAUTH_SECRET= Linux (or in bash terminal if you have windows): `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+NEXTAUTH_SECRET=
 
 GITHUB_ID=
 GITHUB_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
