--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.5.4",
     "next-auth": "^4.24.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
