--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "classnames": "^2.3.2",
     "lucide-react": "^0.288.0",
     "mongodb": "^6.2.0",
-    "next": "13.5.4",
+    "next": "^14.0.0",
     "next-auth": "^4.24.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -27,7 +27,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "^14.0.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
