--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.2",
     "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^5.7.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "classnames": "^2.3.2",
     "heroicons": "^2.0.18",
@@ -18,6 +19,7 @@
     "mongodb": "^6.2.0",
     "next": "^14.0.0",
     "next-auth": "^4.24.3",
+    "prisma": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
