--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.7.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "classnames": "^2.3.2",
     "heroicons": "^2.0.18",
     "lucide-react": "^0.288.0",
