--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.2",
     "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^5.7.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "bcrypt": "^5.1.1",
     "classnames": "^2.3.2",
     "heroicons": "^2.0.18",
     "lucide-react": "^0.288.0",
